@@ -1,5 +1,10 @@
 2013-04-25  Hui Zhu  <hui@codesourcery.com>
 
+	* breakpoint.c (build_target_command_list): Change loc->cond_bytecode
+	to loc->cmd_bytecode.
+
+2013-04-25  Hui Zhu  <hui@codesourcery.com>
+
 	PR gdb/15293
 	* breakpoint.c (bpstat_what): Add BPSTAT_WHAT_SINGLE to bp_dprintf.
 
